--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Portfolio website for OJT internship",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
@@ -18,4 +19,3 @@
     "preview": "vite preview"
   }
 }
-
